--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,6 @@ plugins {
 /* ******************** metadata ******************** */
 
 group 'com.hivemq'
-version = '2020.3-SNAPSHOT'
 description = 'HiveMQ CE is a Java-based open source MQTT broker that fully supports MQTT 3.x and MQTT 5'
 
 ext.mainClassName = 'com.hivemq.HiveMQServer'
@@ -71,19 +70,15 @@ metadata {
 /* ******************** java ******************** */
 
 java {
+    sourceCompatibility = JavaVersion.VERSION_11
+    targetCompatibility = JavaVersion.VERSION_11
+
     withJavadocJar()
     withSourcesJar()
 }
 
-allprojects {
-    plugins.withType(JavaPlugin) {
-        sourceCompatibility = JavaVersion.VERSION_11
-        targetCompatibility = JavaVersion.VERSION_11
-
-        tasks.withType(JavaCompile) {
-            options.encoding = 'UTF-8'
-        }
-    }
+tasks.withType(JavaCompile).configureEach {
+    options.encoding = 'UTF-8'
 }
 
 
@@ -93,173 +88,144 @@ repositories {
     mavenCentral()
 }
 
-ext {
-    // Project Dependency Versions
-    bouncycastlesVersion = '1.64'
-    jacksonVersion = '2.10.3'
-    nettyVersion = '4.1.48.Final'
-    xodusVersion = '1.2.3'
-    guiceVersion = '4.2.3'
-    metricsVersion = '4.0.7'
-
-    // Additional Versions
-    shrinkwrapVersion = '1.2.6'
-}
-
 dependencies {
 
-    compile(
-            /* Netty */
-            [group: 'io.netty', name: 'netty-handler', version: nettyVersion],
-            [group: 'io.netty', name: 'netty-codec-http', version: nettyVersion],
+    implementation "com.hivemq:hivemq-extension-sdk:${property('hivemq-extension-sdk.version')}"
 
-            /* Logging */
-            [group: 'org.slf4j', name: 'jul-to-slf4j', version: '1.7.30'],
+    /* netty */
+    implementation(group: 'io.netty', name: 'netty-handler', version: property('netty.version'))
+    implementation(group: 'io.netty', name: 'netty-codec-http', version: property('netty.version'))
 
-            /* bouncycastles */
-            [group: 'org.bouncycastle', name: 'bcprov-jdk15on', version: bouncycastlesVersion],
-            [group: 'org.bouncycastle', name: 'bcpkix-jdk15on', version: bouncycastlesVersion],
+    /* logging */
+    implementation(group: 'org.slf4j', name: 'jul-to-slf4j', version: property('slf4j.version'))
+    implementation([group: 'ch.qos.logback', name: 'logback-classic', version: property('logback.version')]) {
+        exclude group: 'org.slf4j', module: 'slf4j-api'
+    }
 
-            /* jackson */
-            [group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: jacksonVersion],
-            [group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: jacksonVersion],
+    /* bouncycastles */
+    implementation(group: 'org.bouncycastle', name: 'bcprov-jdk15on', version: property('bouncycastles.version'))
+    implementation(group: 'org.bouncycastle', name: 'bcpkix-jdk15on', version: property('bouncycastles.version'))
 
-            /* rocksdb */
-            [group: 'org.rocksdb', name: 'rocksdbjni', version: '6.5.3'],
+    /* rocksdb */
+    implementation(group: 'org.rocksdb', name: 'rocksdbjni', version: property('rocksdb.version'))
 
-            /* apache commons */
-            [group: 'commons-io', name: 'commons-io', version: '2.6'],
-            [group: 'commons-codec', name: 'commons-codec', version: '1.11'],
-            [group: 'commons-collections', name: 'commons-collections', version: '3.2.2'],
-            [group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'],
+    /* apache commons */
+    implementation(group: 'commons-io', name: 'commons-io', version: property('commons-io.version'))
+    implementation(group: 'commons-codec', name: 'commons-codec', version: property('commons-codec.version'))
+    implementation(group: 'commons-collections', name: 'commons-collections', version: property('commons-collections.version'))
+    implementation(group: 'org.apache.commons', name: 'commons-lang3', version: property('commons-lang.version'))
 
-            /* xml */
-            [group: 'com.sun.xml.bind', name: 'jaxb-core', version: '2.3.0.1'],
-            [group: 'com.sun.xml.bind', name: 'jaxb-impl', version: '2.3.2'],
-            [group: 'javax.xml.bind', name: 'jaxb-api', version: '2.2.12'],
+    /* xml */
+    implementation(group: 'com.sun.xml.bind', name: 'jaxb-core', version: property('jaxb-core.version'))
+    implementation(group: 'com.sun.xml.bind', name: 'jaxb-impl', version: property('jaxb-impl.version'))
+    implementation(group: 'javax.xml.bind', name: 'jaxb-api', version: property('jaxb-api.version'))
 
-            /* javax */
-            [group: 'javax.activation', name: 'activation', version: '1.1.1'],
-            [group: 'javax.validation', name: 'validation-api', version: '1.1.0.Final'],
-            [group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'],
+    /* javax */
+    implementation(group: 'javax.activation', name: 'activation', version: property('javax.activation.version'))
+    implementation(group: 'javax.validation', name: 'validation-api', version: property('javax.validation.version'))
+    implementation(group: 'javax.annotation', name: 'javax.annotation-api', version: property('javax.annotation.version'))
 
-            /* Hashing */
-            [group: 'net.openhft', name: 'zero-allocation-hashing', version: '0.11'],
+    /* hashing */
+    implementation(group: 'net.openhft', name: 'zero-allocation-hashing', version: property('zero-allocation-hashing.version'))
 
+    /* temporary dependencies to override transitive ones that have security vulnerabilities*/
+    implementation(group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib', version: '1.3.71')
+    implementation(group: 'org.apache.commons', name: 'commons-compress', version: '1.20')
 
-            /* temporary dependencies to override transitive ones that have security vulnerabilities*/
-            [group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib', version: '1.3.71'],
-            [group: 'org.apache.commons', name: 'commons-compress', version: '1.20'],
-    )
-
-    /* Guava */
-    compile([group: 'com.google.guava', name: 'guava', version: '27.1-jre']) {
+    /* guava */
+    implementation([group: 'com.google.guava', name: 'guava', version: property('guava.version')]) {
         //We don't need the HTTP Client since we are only interested in the server version
         exclude group: 'org.checkerframework', module: 'checker-qual'
         exclude group: 'com.google.errorprone', module: 'error_prone_annotations'
         exclude group: 'org.codehaus.mojo', module: 'animal-sniffer-annotations'
     }
 
-    /* Oshi */
-    compile([group: 'com.github.oshi', name: 'oshi-core', version: '3.6.2']) {
+    /* oshi */
+    implementation([group: 'com.github.oshi', name: 'oshi-core', version: property('oshi.version')]) {
         //We don't need the HTTP Client since we are only interested in the server version
         exclude group: 'org.slf4j', module: 'slf4j-api'
     }
 
-    compile([group: 'io.dropwizard.metrics', name: 'metrics-logback', version: metricsVersion]) {
+    /* metrics */
+    implementation([group: 'io.dropwizard.metrics', name: 'metrics-logback', version: property('metrics.version')]) {
         exclude group: 'org.slf4j', module: 'slf4j-api'
         exclude group: 'ch.qos.logback', module: 'logback-classic'
     }
-    compile([group: 'io.dropwizard.metrics', name: 'metrics-core', version: metricsVersion]) {
+    implementation([group: 'io.dropwizard.metrics', name: 'metrics-core', version: property('metrics.version')]) {
         exclude group: 'org.slf4j', module: 'slf4j-api'
     }
-    compile([group: 'io.dropwizard.metrics', name: 'metrics-jmx', version: metricsVersion]) {
+    implementation([group: 'io.dropwizard.metrics', name: 'metrics-jmx', version: property('metrics.version')]) {
         exclude group: 'org.slf4j', module: 'slf4j-api'
     }
 
-    /* Xodus */
-    compile([group: 'org.jetbrains.xodus', name: 'xodus-environment', version: xodusVersion]) {
+    /* xodus */
+    implementation([group: 'org.jetbrains.xodus', name: 'xodus-environment', version: property('xodus.version')]) {
         exclude group: 'org.slf4j', module: 'slf4j-api'
         exclude group: 'org.jetbrains', module: 'annotations'
     }
-    compile([group: 'org.jetbrains.xodus', name: 'xodus-openAPI', version: xodusVersion]) {
+    implementation([group: 'org.jetbrains.xodus', name: 'xodus-openAPI', version: property('xodus.version')]) {
         exclude group: 'org.slf4j', module: 'slf4j-api'
         exclude group: 'org.jetbrains', module: 'annotations'
     }
-    compile([group: 'org.jetbrains.xodus', name: 'xodus-entity-store', version: xodusVersion]) {
+    implementation([group: 'org.jetbrains.xodus', name: 'xodus-entity-store', version: property('xodus.version')]) {
         exclude group: 'org.slf4j', module: 'slf4j-api'
         exclude group: 'org.jetbrains', module: 'annotations'
     }
-    compile([group: 'org.jetbrains.xodus', name: 'xodus-utils', version: xodusVersion]) {
+    implementation([group: 'org.jetbrains.xodus', name: 'xodus-utils', version: property('xodus.version')]) {
         exclude group: 'org.slf4j', module: 'slf4j-api'
         exclude group: 'org.jetbrains', module: 'annotations'
     }
 
-    /* Jackson */
-    compile([group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-guava', version: jacksonVersion]) {
+    /* jackson */
+    implementation(group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: property('jackson.version'))
+    implementation(group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: property('jackson.version'))
+    implementation([group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-guava', version: property('jackson.version')]) {
         exclude group: 'com.google.guava', module: 'guava'
         exclude group: 'com.fasterxml.jackson.core', module: 'jackson-annotations'
         exclude group: 'com.fasterxml.jackson.core', module: 'jackson-core'
     }
-    compile([group: 'com.fasterxml.jackson.jaxrs', name: 'jackson-jaxrs-json-provider', version: jacksonVersion]) {
+    implementation([group: 'com.fasterxml.jackson.jaxrs', name: 'jackson-jaxrs-json-provider', version: property('jackson.version')]) {
         exclude group: 'com.fasterxml.jackson.core', module: 'jackson-annotations'
         exclude group: 'com.fasterxml.jackson.core', module: 'jackson-core'
     }
 
-    /* Dependency injection */
-    compile([group: 'com.google.inject', name: 'guice', version: guiceVersion]) {
+    /* dependency injection */
+    implementation([group: 'com.google.inject', name: 'guice', version: property('guice.version')]) {
         exclude group: 'com.google.guava', module: 'guava'
     }
 
-    /* Logging */
-    compile([group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3']) {
-        exclude group: 'org.slf4j', module: 'slf4j-api'
-    }
 
-    compile 'com.hivemq:hivemq-extension-sdk:4.3.0'
+    testImplementation(group: 'junit', name: 'junit', version: property('junit.version'))
+    testImplementation(group: 'org.mockito', name: 'mockito-core', version: property('mockito.version'))
+    testImplementation(group: 'net.jodah', name: 'concurrentunit', version: '0.4.2')
 
+    /* shrinkwrap api for creating jar archives on the fly */
+    testImplementation(group: 'org.jboss.shrinkwrap', name: 'shrinkwrap-api', version: property('shrinkwrap.version'))
+    testImplementation(group: 'net.bytebuddy', name: 'byte-buddy', version: '1.9.4')
+    testImplementation(group: 'org.assertj', name: 'assertj-core', version: '2.0.0')
 
-    testCompile(
-            [group: 'junit', name: 'junit', version: '4.12'],
-            [group: 'org.mockito', name: 'mockito-core', version: '2.28.2'],
-            [group: 'net.jodah', name: 'concurrentunit', version: '0.4.2'],
+    /* Hamcrest Matcher */
+    testImplementation(group: 'org.hamcrest', name: 'java-hamcrest', version: '2.0.0.0')
 
-            /*
-             * Shrinkwrap API for creating JAR Archives on the fly
-             */
-            [group: 'org.jboss.shrinkwrap', name: 'shrinkwrap-api', version: shrinkwrapVersion],
-            [group: 'net.bytebuddy', name: 'byte-buddy', version: '1.9.4'],
-            [group: 'org.assertj', name: 'assertj-core', version: '2.0.0'],
+    //additional reflection possibilities
+    testImplementation(group: 'org.reflections', name: 'reflections', version: '0.9.11')
 
-            /* Hamcrest Matcher */
-            [group: 'org.hamcrest', name: 'java-hamcrest', version: '2.0.0.0'],
+    // wiremock
+    testImplementation(group: 'com.github.tomakehurst', name: 'wiremock-standalone', version: '2.8.0')
 
-            //additional reflection possibilities
-            [group: 'org.reflections', name: 'reflections', version: '0.9.11'],
+    testImplementation(group: 'org.javassist', name: 'javassist', version: '3.26.0-GA')
 
-            // wiremock
-            [group: 'com.github.tomakehurst', name: 'wiremock-standalone', version: '2.8.0'],
+    testImplementation(group: 'nl.jqno.equalsverifier', name: 'equalsverifier', version: '3.1.13')
 
-            [group: 'org.javassist', name: 'javassist', version: '3.26.0-GA'],
-
-            [group: 'nl.jqno.equalsverifier', name: 'equalsverifier', version: '3.1.13']
-    )
-
-    testCompile([group: 'com.github.stefanbirkner', name: 'system-rules', version: '1.19.0']) {
+    testImplementation([group: 'com.github.stefanbirkner', name: 'system-rules', version: '1.19.0']) {
         exclude group: 'junit', module: 'junit-dep'
     }
 
     /* We need some HotSpot methods to generate heapdumps from code */
-    testCompile files(
-            "${System.getProperty('java.home')}/../lib/sa-jdi.jar"
-    )
+    testImplementation files("${System.getProperty('java.home')}/../lib/sa-jdi.jar")
 
-    testRuntime(
-            /*
-             * Shrinkwrap Implementation for creating JAR Archives on the fly
-             */
-            [group: 'org.jboss.shrinkwrap', name: 'shrinkwrap-impl-base', version: shrinkwrapVersion],
-    )
+    /* shrinkwrap implementation for creating jar archives on the fly */
+    testRuntimeOnly(group: 'org.jboss.shrinkwrap', name: 'shrinkwrap-impl-base', version: property('shrinkwrap.version'))
 
     //plugins for spotbugs
     spotbugsPlugins 'com.h3xstream.findsecbugs:findsecbugs-plugin:1.8.0'
@@ -268,7 +234,7 @@ dependencies {
 
 /* ******************** test ******************** */
 
-test {
+tasks.test {
     jvmArgs += ["-Dfile.encoding=UTF-8", "-noverify", "--add-opens", "java.base/java.lang=ALL-UNNAMED", "--add-opens", "java.base/java.nio=ALL-UNNAMED", "--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED", "--add-opens", "jdk.management/com.sun.management.internal=ALL-UNNAMED", "--add-exports", "java.base/jdk.internal.misc=ALL-UNNAMED"]
     minHeapSize = "128m"
     maxHeapSize = "2048m"
@@ -305,7 +271,7 @@ ext {
     zipDir = "${buildDir}/zip"
 }
 
-jar {
+tasks.jar {
     manifest {
         attributes 'Implementation-Title': 'HiveMQ'
         attributes 'Implementation-Vendor': metadata.organization.name
@@ -315,11 +281,11 @@ jar {
     }
 }
 
-shadowJar {
+tasks.shadowJar {
     mergeServiceFiles()
 }
 
-task cleanPackaging {
+tasks.register('cleanPackaging') {
     group 'packaging'
 
     doFirst {
@@ -327,7 +293,7 @@ task cleanPackaging {
     }
 }
 
-task copyXml(type: Copy) {
+tasks.register('copyXml', Copy) {
     group 'packaging'
 
     mustRunAfter tasks.cleanPackaging
@@ -336,7 +302,7 @@ task copyXml(type: Copy) {
     into "${project.packagingProjectDir}/conf"
 }
 
-task copyPackaging(type: Copy) {
+tasks.register('copyPackaging', Copy) {
     group 'packaging'
 
     mustRunAfter tasks.cleanPackaging
@@ -350,7 +316,7 @@ task copyPackaging(type: Copy) {
     }
 }
 
-task copyJar(type: Copy) {
+tasks.register('copyJar', Copy) {
     group 'packaging'
 
     mustRunAfter tasks.cleanPackaging
@@ -364,7 +330,7 @@ task copyJar(type: Copy) {
     }
 }
 
-task packaging(type: Zip) {
+tasks.register('packaging', Zip) {
     group 'packaging'
 
     dependsOn tasks.cleanPackaging
@@ -380,7 +346,7 @@ task packaging(type: Zip) {
 
 defaultTasks 'clean', 'packaging'
 
-javadoc {
+tasks.javadoc {
     options.charSet = 'UTF-8'
     options.encoding = 'UTF-8'
 
@@ -405,10 +371,8 @@ ext {
     spotbugsVersion = '3.1.12'
 }
 
-compileJava {
-    if (!System.properties['java.version'].startsWith('11')) {
-        throw new RuntimeException('Incompatible JRE version: ' + System.properties['java.version'] + '. Use JRE 11 instead.')
-    }
+if (!System.properties['java.version'].startsWith('11')) {
+    throw new RuntimeException('Incompatible JRE version: ' + System.properties['java.version'] + '. Use JRE 11 instead.')
 }
 
 jacoco {
@@ -456,13 +420,9 @@ forbiddenApisTest.enabled = false
 
 /* ******************** compliance ******************** */
 
-allprojects {
-    license {
-        header file("${rootDir}/HEADER")
-        mapping {
-            java = 'SLASHSTAR_STYLE'
-        }
-    }
+license {
+    header file("${rootDir}/HEADER")
+    mapping('java', 'SLASHSTAR_STYLE')
 }
 
 downloadLicenses {
@@ -481,7 +441,7 @@ downloadLicenses {
     ]
 }
 
-task updateThirdPartyLicenses {
+tasks.register('updateThirdPartyLicenses') {
     group 'license'
     dependsOn tasks.downloadLicenses
     doLast {
