--- a/build.gradle
+++ b/build.gradle
@@ -115,21 +115,17 @@ dependencies {
     implementation("org.apache.commons:commons-lang3:${property('commons-lang.version')}")
 
     /* xml */
-    implementation("com.sun.xml.bind:jaxb-core:${property('jaxb-core.version')}")
-    implementation("com.sun.xml.bind:jaxb-impl:${property('jaxb-impl.version')}")
     implementation("javax.xml.bind:jaxb-api:${property('jaxb-api.version')}")
+    runtimeOnly("com.sun.xml.bind:jaxb-core:${property('jaxb-core.version')}")
+    runtimeOnly("com.sun.xml.bind:jaxb-impl:${property('jaxb-impl.version')}")
 
     /* javax */
-    implementation("javax.activation:activation:${property('javax.activation.version')}")
-    implementation("javax.validation:validation-api:${property('javax.validation.version')}")
     implementation("javax.annotation:javax.annotation-api:${property('javax.annotation.version')}")
+    runtimeOnly("javax.activation:activation:${property('javax.activation.version')}")
+    runtimeOnly("javax.validation:validation-api:${property('javax.validation.version')}")
 
     /* hashing */
     implementation("net.openhft:zero-allocation-hashing:${property('zero-allocation-hashing.version')}")
-
-    /* temporary dependencies to override transitive ones that have security vulnerabilities*/
-    implementation("org.jetbrains.kotlin:kotlin-stdlib:1.3.71")
-    implementation("org.apache.commons:commons-compress:1.20")
 
     /* guava */
     implementation("com.google.guava:guava:${property('guava.version')}") {
@@ -146,31 +142,23 @@ dependencies {
     }
 
     /* metrics */
-    implementation("io.dropwizard.metrics:metrics-logback:${property('metrics.version')}") {
-        exclude group: 'org.slf4j', module: 'slf4j-api'
-        exclude group: 'ch.qos.logback', module: 'logback-classic'
-    }
     implementation("io.dropwizard.metrics:metrics-core:${property('metrics.version')}") {
         exclude group: 'org.slf4j', module: 'slf4j-api'
     }
     implementation("io.dropwizard.metrics:metrics-jmx:${property('metrics.version')}") {
         exclude group: 'org.slf4j', module: 'slf4j-api'
     }
+    runtimeOnly("io.dropwizard.metrics:metrics-logback:${property('metrics.version')}") {
+        exclude group: 'org.slf4j', module: 'slf4j-api'
+        exclude group: 'ch.qos.logback', module: 'logback-classic'
+    }
 
     /* xodus */
-    implementation("org.jetbrains.xodus:xodus-environment:${property('xodus.version')}") {
-        exclude group: 'org.slf4j', module: 'slf4j-api'
-        exclude group: 'org.jetbrains', module: 'annotations'
-    }
     implementation("org.jetbrains.xodus:xodus-openAPI:${property('xodus.version')}") {
         exclude group: 'org.slf4j', module: 'slf4j-api'
         exclude group: 'org.jetbrains', module: 'annotations'
     }
-    implementation("org.jetbrains.xodus:xodus-entity-store:${property('xodus.version')}") {
-        exclude group: 'org.slf4j', module: 'slf4j-api'
-        exclude group: 'org.jetbrains', module: 'annotations'
-    }
-    implementation("org.jetbrains.xodus:xodus-utils:${property('xodus.version')}") {
+    implementation("org.jetbrains.xodus:xodus-environment:${property('xodus.version')}") {
         exclude group: 'org.slf4j', module: 'slf4j-api'
         exclude group: 'org.jetbrains', module: 'annotations'
     }
@@ -191,6 +179,12 @@ dependencies {
     /* dependency injection */
     implementation("com.google.inject:guice:${property('guice.version')}") {
         exclude group: 'com.google.guava', module: 'guava'
+    }
+
+    /* temporary dependencies to override transitive ones that have security vulnerabilities */
+    constraints {
+        implementation("org.jetbrains.kotlin:kotlin-stdlib:1.3.71")
+        implementation("org.apache.commons:commons-compress:1.20")
     }
 
     testImplementation("junit:junit:${property('junit.version')}")
@@ -408,19 +402,42 @@ license {
 }
 
 downloadLicenses {
-    ext.apacheTwo = license('Apache License, Version 2.0', 'http://opensource.org/licenses/Apache-2.0')
-    ext.cddlOnePointZero = license('CDDL, Version 1.0', 'http://glassfish.java.net/public/CDDLv1.0.html')
-    ext.cddlOnePointOne = license('CDDL, Version 1.1', 'http://glassfish.java.net/public/CDDL+GPL_1_1.html')
-    ext.lgplTwoPointOne = license('LGPL, Version 2.1', 'http://www.gnu.org/licenses/lgpl-2.1.html')
-    ext.eplOnePointZero = license('EPL, Version 1.0', 'http://www.eclipse.org/legal/epl-v10.html')
+    ext.apache_2 = license('Apache License, Version 2.0', 'https://opensource.org/licenses/Apache-2.0')
+    ext.mit = license('MIT License', 'https://opensource.org/licenses/MIT')
+    ext.cddl_1_0 = license('CDDL, Version 1.0', 'https://opensource.org/licenses/CDDL-1.0')
+    ext.cddl_1_1 = license('CDDL, Version 1.1', 'https://oss.oracle.com/licenses/CDDL+GPL-1.1')
+    ext.epl_1_0 = license('EPL, Version 1.0', 'https://www.eclipse.org/legal/epl-v10.html')
+    ext.edl_1_0 = license('EDL, Version 1.0', 'https://www.eclipse.org/org/documents/edl-v10.php')
+    ext.bsd_3clause = license('BSD 3-Clause License', 'https://opensource.org/licenses/BSD-3-Clause')
+    ext.bouncycastle = license('Bouncy Castle Licence', 'https://www.bouncycastle.org/licence.html')
 
     aliases = [
-            (apacheTwo)       : ['Apache License 2', 'Apache Software License - Version 2.0', 'The Apache Software License, Version 2.0', 'Apache 2', 'Apache License Version 2.0', 'Apache License, Version 2.0', 'Apache License 2.0', 'Apache 2.0', 'The Apache License, Version 2.0', license('Apache License', 'http://www.apache.org/licenses/LICENSE-2.0')],
-            (cddlOnePointZero): ['Common Development and Distribution License (CDDL) v1.0', 'COMMON DEVELOPMENT AND DISTRIBUTION LICENSE (CDDL) Version 1.0'],
-            (cddlOnePointOne) : ['CDDL 1.1'],
-            (lgplTwoPointOne) : ['LGPL 2.1', 'GNU Lesser General Public License'],
-            (eplOnePointZero) : ['Eclipse Public License - Version 1.0', 'Eclipse Public License', 'Eclipse Public License - v 1.0']
+            (apache_2)    : ['Apache License 2.0',
+                             'Apache License v2.0',
+                             'Apache License, Version 2.0',
+                             'The Apache License, Version 2.0',
+                             'The Apache Software License, Version 2.0'],
+            (mit)         : ['MIT License'],
+            (cddl_1_0)    : ['CDDL, Version 1.0',
+                             'COMMON DEVELOPMENT AND DISTRIBUTION LICENSE (CDDL) Version 1.0'],
+            (cddl_1_1)    : ['CDDL 1.1',
+                             'CDDL, Version 1.1',
+                             'CDDL+GPL License',
+                             'CDDL + GPLv2 with classpath exception',
+                             'GPL2 w/ CPE'],
+            (epl_1_0)     : ['EPL, Version 1.0',
+                             'Eclipse Public License - v 1.0',
+                             license('Eclipse Public License', 'http://www.eclipse.org/legal/epl-v10.html')],
+            (edl_1_0)     : ['EDL 1.0',
+                             'EDL, Version 1.0',
+                             'Eclipse Distribution License - v 1.0'],
+            (bsd_3clause) : ['BSD 3-clause',
+                             'BSD 3-Clause License'],
+            (bouncycastle): ['Bouncy Castle Licence']
     ]
+
+    dependencyConfiguration = 'runtimeClasspath'
+    excludeDependencies = ["com.hivemq:hivemq-extension-sdk:${property('hivemq-extension-sdk.version')}"]
 }
 
 tasks.register('updateThirdPartyLicenses') {
