build > removed unnecessary dependency exclusions

--- a/build.gradle
+++ b/build.gradle
@@ -152,13 +152,8 @@ dependencies {
     implementation("com.fasterxml.jackson.core:jackson-annotations:${property('jackson.version')}")
     implementation("com.fasterxml.jackson.datatype:jackson-datatype-guava:${property('jackson.version')}") {
         exclude group: 'com.google.guava', module: 'guava'
-        exclude group: 'com.fasterxml.jackson.core', module: 'jackson-annotations'
-        exclude group: 'com.fasterxml.jackson.core', module: 'jackson-core'
     }
-    implementation("com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:${property('jackson.version')}") {
-        exclude group: 'com.fasterxml.jackson.core', module: 'jackson-annotations'
-        exclude group: 'com.fasterxml.jackson.core', module: 'jackson-core'
-    }
+    implementation("com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:${property('jackson.version')}")
 
     /* dependency injection */
     implementation("com.google.inject:guice:${property('guice.version')}") {
