--- a/gradle.properties
+++ b/gradle.properties
@@ -43,4 +43,5 @@ plugin.bintray.version=1.8.4
 plugin.dependencycheck.version=5.3.2
 plugin.spotbugs.version=3.0.0
 plugin.forbiddenapis.version=2.6
-plugin.metadata.version=0.1.1
+plugin.utf8.version=0.1.0
+plugin.metadata.version=0.1.2
